--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -5,4 +5,11 @@ set(CMAKE_CXX_STANDARD 20)
 
 include_directories(include)
 
-add_executable(WMM main.cpp  src/program.cpp)
+add_library(engine src/tokenizer.cpp
+        src/parser.cpp)
+
+add_executable(executor main.cpp)
+target_link_libraries(executor PRIVATE engine)
+
+# TODO: add if
+add_subdirectory(tests)
