cas and fai parsers

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -6,7 +6,8 @@ set(CMAKE_CXX_STANDARD 20)
 include_directories(include)
 
 add_library(engine src/tokenizer.cpp
-        src/parser.cpp)
+        src/parser.cpp
+        src/code.cpp)
 
 add_executable(executor main.cpp)
 target_link_libraries(executor PRIVATE engine)
