--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -2,13 +2,15 @@ cmake_minimum_required(VERSION 3.26)
 project(WMM)
 
 set(CMAKE_CXX_STANDARD 20)
-
 include_directories(include)
 
 add_library(engine src/tokenizer.cpp
         src/parser.cpp
         src/code.cpp
-        src/program.cpp)
+        src/program.cpp
+        src/thread.cpp)
+
+target_compile_options(engine PRIVATE -Wall -Wextra -Wpedantic)
 
 add_executable(executor main.cpp)
 target_link_libraries(executor PRIVATE engine)
