--- a/.github/workflows/build-format-test.yml
+++ b/.github/workflows/build-format-test.yml
@@ -27,7 +27,7 @@ jobs:
         run: clang-tidy -p build src/*.cpp -- -std=c++20 -Ibuild/_deps/catch2-src/src/ -Iinclude -Ibuild/_deps/catch2-build/generated-includes
 
       - name: Perform style analysis (tests)
-        run: clang-tidy -p build tests/*.cpp -- -std=c++20 -Ibuild/_deps/catch2-src/src/ -Iinclude -Ibuild/_deps/catch2-build/generated-includes
+        run: clang-tidy -p build $(find tests -name "*.cpp") -- -std=c++20 -Ibuild/_deps/catch2-src/src/ -Iinclude -Ibuild/_deps/catch2-build/generated-includes
 
   run-tests:
     runs-on: ubuntu-latest
