--- a/tests/pso/CMakeLists.txt
+++ b/tests/pso/CMakeLists.txt
@@ -5,6 +5,6 @@ set(CMAKE_CXX_STANDARD 17)
 set(CMAKE_CXX_STANDARD_REQUIRED True)
 
 add_executable(test_pso test_pso.cpp)
-target_link_libraries(test_pso engine)  # Replace 'engine' with actual library name if needed
+target_link_libraries(test_pso engine executor pthread)  # Replace 'engine' with actual library name if needed
 
 
